# lethe

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  MIGRATION.md  README.md  install.sh  pyproject.toml  update.sh
.cargo/: config.toml
.github/workflows/: release-migrator.yml  release.yml
config/: model_catalog.json  model_context_limits.json
config/blocks/: identity.md
config/prompts/: actor_initial_message.md  actor_principal_preamble.md  actor_principal_rules.md  actor_subagent_preamble.md  actor_subagent_rules.md  agent_instructions.md  llm_summarize.md  llm_summarize_system.md  llm_summarize_update.md  notification_review.md
migrator/: Cargo.toml  README.md
migrator/src/: dest.rs  main.rs  source.rs  verify.rs
migrator/tests/: round_trip.rs
scripts/: gen-avatar-frames  package-migrator  package-release
src/: actor.rs  agent.rs  config.rs  lib.rs  main.rs
src/actor/: helpers.rs
src/agent/: tool_loop.rs
src/agent_id/: cli.rs  crypto.rs  mod.rs  secure_prompt.rs
src/cli/: avatar.rs  avatar_frames.ansi  container.rs  handlers.rs  identity.rs  init.rs  mod.rs  model.rs  prompts.rs  service.rs  telegram_loop.rs  transport.rs  transport_supervisor.rs  uninstall.rs  util.rs
src/conversation/: transcription.rs
src/interfaces/: api.rs  telegram.rs
src/interfaces/telegram/: formatting.rs
src/lethe/: api.py  main.py  notification_gate.py  notification_reviewer.py  notification_router.py  notification_scoring.py  notification_signals.py  reaction_transport.py  runtime.py  utils.py
src/lethe/actor/: __init__.py  brainstem.py  dmn.py  integration.py  runner.py  tools.py
src/lethe/agent/: __init__.py
src/lethe/config/: __init__.py
src/lethe/context/: __init__.py  claude.py  default.py
src/lethe/memory/: hippocampus.py  llm.py  salience.py
src/lethe/telegram/: __init__.py
src/lethe/tools/: policy.py  telegram_tools.py
src/llm/: anthropic_oauth.rs  client.rs  mod.rs  models.rs  oauth_env.rs  openai_oauth.rs  prompts.rs
src/memory/: message_metadata.rs
src/scheduler/: brainstem.rs  curator.rs  proactive.rs
src/tools/: agent_id.rs  browser.rs  filesystem.rs  knowledge_graph.rs  mcp.rs  mod.rs  registry.rs  shell.rs  spec.rs  web.rs
src/tools/registry/: builtin_specs.rs  catalog.rs  client.rs  egress.rs  observer.rs  telegram_specs.rs  tests.rs
src/tui/: app.rs  client.rs  markdown.rs  state.rs
src/tui/view/: footer.rs  mod.rs  sidebar.rs  transcript.rs
tests/: test_architecture_integration.py  test_notification_gate.py  test_notification_reviewer.py  test_prompt_assembly.py  test_telegram_guard_integration.py  test_telegram_reactions.py  test_tools.py  test_utils.py
